tests/trybuild/test.stderr
error: Expected one of `>` or `/>`
 --> $DIR/test.rs:5:14
  |
5 |         <div foo />
  |              ^^^
