tests/trybuild/test.rs
use greenhorn::html;

fn main() {
    let _html = html!(
        <div foo />
    );
}

